# mountain_town

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
mountain_town/math/: random.h
mountain_town/string/: basic.cpp  basic.h  toml.cpp  toml.h
src/math/: random.cpp
src/mountain_town/math/: random.cpp  random.h
src/mountain_town/neural_network/basic/: basic.cpp  basic.h
src/mountain_town/neural_network/nlp/: basic.cpp  basic.h
src/mountain_town/string/: basic.cpp  basic.h  toml.cpp  toml.h
src/string/: basic.cpp  basic.h  toml.cpp  toml.h
tests/: CMakeLists.txt  lib_test.cpp  mountain_town_test.cpp
tests/math/: random_test.cpp
tests/neural_network/nlp/: basic_test.cpp
tests/string/: basic_test.cpp  toml_test.cpp
tests/string/testdata/: config.toml  config1.toml  testdata.toml
